--- a/shippable.yml
+++ b/shippable.yml
@@ -35,7 +35,7 @@ deploy:
 integrations:
   hub:
     - integrationName: realdockerdavid
-      type: docker
+      type: Docker
       branches:
         only:
           - master
